excalidraw/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  labels:
    app: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          tty: true
