excalidraw/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  labels:
    app: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
